1.0
===

- Added possibility to create labels in CheckboxLists.

- Applied James Curran's patch fixing MR-390
  "Adding AbstractHelper(IEngineContext) ctor"

- Applied Gauthier Segay's patch fixing MR-388 
  "There should be a way to preserve url query string arguments while using DiggStylePagination" 

- Applied Mike Nichols' patch adding two more events to the extension manager.

- Applied Felix Gartsman's patch fixing MR-387
  "ViewComponent selective caching"

- Applied Felix Gartsman's patch fixing MR-368
  "Added DetachedCriteria support to ARPaginationHelper/ARPaginableCriteria"

- Applied Gauthier Segay's patch fixing MR-384
  "GenericCustomPage<T> should rely on IEnumerable<T> instead of IList<T> for it's datasource"

- Applied James Curran's patch fixing MR-347
  "Cannot specify a default value for ViewComponentParameterAttribute"

- Applied Adam Tybor's patch fixing MR-370
  "RouteContext and Http Method Filtering for PatternRule"

- Applied Daniel Jin's patch fixing MR-372
  "add monorail configuration section to set the useExtensions option on DefaultUrlBuilder"

- Fixed MR-84
  "Nested classes are mapped wrongly to form fields"

- Applied Kode Khan's patch changing logger creation to use type instead of controller's name

- Implemented support for view component caching. Just use the attribute 
  ViewComponentDetails and its properties (cache, cachekeygenerator)

- Applied Michael Sanford's patch which adds image button support to FormHelper.

- Applied Rafael Teixeira's patch fixing MR-357
  "ViewEngineBase.IsTemplateForJSGeneration(String templateName) returns 
   true for a templateName with an incorrect extension"

- Added support for Composite Key in Formhelper select

- Applied Chris Ortman's patch with changes for the REST support (MR-333)

- Applied Nick Hemsley's patch adding support for rescue controllers (MR-332)
  "add RescueController to RescueAttribute"

- Applied suggestion by Daniel D to fix MR-329